--- a/src/components/ui/coder/memory/memory.css
+++ b/src/components/ui/coder/memory/memory.css
@@ -1,4 +1,7 @@
 .memory {
-    width: calc(100 * var(--resolution));
+    width: calc(200 * var(--resolution));
+    height: calc(100% - 20 * var(--resolution));
     margin: calc(5 * var(--resolution));
+
+    background-color: var(--c24);
 }
