--- a/src/components/ui/coder/instructions/instructions.css
+++ b/src/components/ui/coder/instructions/instructions.css
@@ -1,22 +1,22 @@
 .instructions {
-    width: calc(100 * var(--resolution));
-    height: calc(100% - 20 * var(--resolution));
-    margin: calc(5 * var(--resolution));
-
-    background-color: var(--c24);;
+    width: 250px;
+    height: 93%;
+    margin: 1%;
 }
 
 .textarea {
-    width: calc(100% - 10 * var(--resolution));
-    height: calc(100% - 10 * var(--resolution));
+    width: 98%;
+    height: 99.5%;
 
     resize: none;
 
     font-family: 'PIXEL';
-    font-size: var(--font-size);
-    text-shadow: calc(1 * var(--resolution)) calc(1 * var(--resolution)) var(--c1);
+    font-size: 42px;
+    text-shadow: 4px 4px var(--c1);
     outline: none;
 
     color: var(--c24);
-    background-color: var(--c26);
+    background-color: var(--c1);
+
+    border: inset 0 0 10px 10px black;
 }
