--- a/src/components/ui/coder/instructions/instructions.css
+++ b/src/components/ui/coder/instructions/instructions.css
@@ -1,12 +1,13 @@
 .instructions {
     width: 250px;
-    height: 93%;
     margin: 1%;
 }
 
 .textarea {
-    width: 90%;
-    height: 98%;
+    width: calc(100% - 48px);
+    height: calc(100% - 48px);
+
+    padding: 5%;
 
     resize: none;
 
@@ -21,5 +22,5 @@
 }
 
 .error {
-    border: 2px dotted red;
+    color: var(--c12) !important;
 }
