--- a/src/css/steampunk.css
+++ b/src/css/steampunk.css
@@ -1,3 +1,10 @@
+:root{
+    --pixel-size: 0.0045;
+    --font-size-scale: 15;
+    --resolution: calc(min(100vw, 100vh) * var(--pixel-size));
+    --font-size: calc(var(--resolution) * var(--font-size-scale));
+}
+
 @font-face {
     font-family: 'PIXEL';
     src: url('PIXEL.ttf');
@@ -9,11 +16,11 @@ body {
 }
 
 .container {
-    border: 38px solid transparent;
+    border: calc(8 * var(--resolution)) solid transparent;
 	border-image: url('panel2.png') 38 repeat;
 }
 
 .container.inner {
-    border: 12px solid transparent;
+    border: calc(2 * var(--resolution)) solid transparent;
 	border-image: url('panelinner.png') 12 repeat;
 }
