--- a/src/css/steampunk.css
+++ b/src/css/steampunk.css
@@ -1,6 +1,6 @@
 :root{
     --pixel-size: 0.0045;
-    --font-size-scale: 15;
+    --font-size-scale: 16;
     --resolution: calc(min(100vw, 100vh) * var(--pixel-size));
     --font-size: calc(var(--resolution) * var(--font-size-scale));
 }
@@ -12,7 +12,7 @@
 
 body {
     font-family: 'PIXEL', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 32;
+    font-size: var(--font-size)
 }
 
 .container {
