--- a/src/components/ui/coder/memory/memory.css
+++ b/src/components/ui/coder/memory/memory.css
@@ -1,12 +1,11 @@
 .memory {
     width: calc(100 * var(--resolution));
+    height: calc(200 * var(--resolution));
     margin: calc(5 * var(--resolution));
 }
 
 .memory-inner {
-    width: 100%;
     height: 100%;
-
     background-color: var(--c21);
 
     display: flex;
