cleaned up pixel art

--- a/src/components/ui/coder/controls/controls.css
+++ b/src/components/ui/coder/controls/controls.css
@@ -5,4 +5,8 @@
 
     background-color: var(--c21);
     border-radius: 50%;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
