--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -41,3 +41,12 @@ body {
 	top: 0;
 	left: 0;
 }
+
+.prompt-container {
+	width: 100vw;
+	height: 100vh;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
